--- a/src/BandaTocarDomain/BandaTocarDomain.csproj
+++ b/src/BandaTocarDomain/BandaTocarDomain.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+      <InternalVisibleTo Include = "BandaTocaRepository" />
+      <InternalVisibleTo Include = "BandaTocarDI" />
+  </ItemGroup>
 </Project>
